add swagger login, verified email
