# app/Virtual/Models/User.php
@@ -44,19 +44,6 @@ class User
 
   /**
    * @OA\Property(
-   *     title="Email verified at",
-   *     description="Email verified at",
-   *     example="2020-01-27 17:50:45",
-   *     format="datetime",
-   *     type="string"
-   * )
-   *
-   * @var \DateTime
-   */
-  private $email_verified_at;
-
-  /**
-   * @OA\Property(
    *     title="Created at",
    *     description="Created at",
    *     example="2020-01-27 17:50:45",
@@ -80,17 +67,4 @@ class User
    * @var \DateTime
    */
   private $updated_at;
-
-  /**
-   * @OA\Property(
-   *     title="Deleted at",
-   *     description="Deleted at",
-   *     example="2020-01-27 17:50:45",
-   *     format="datetime",
-   *     type="string"
-   * )
-   *
-   * @var \DateTime
-   */
-  private $deleted_at;
 }
