# routes/api.php
@@ -7,6 +7,7 @@ use App\Http\Controllers\Api\AuthController;
 use App\Http\Controllers\Api\PublisherController;
 use App\Http\Controllers\Api\AuthorController;
 use App\Http\Controllers\Api\BookController;
+use App\Http\Controllers\VerificationController;
 
 /*
 |--------------------------------------------------------------------------
@@ -40,4 +41,10 @@ Route::group([
 
 Route::middleware('auth:sanctum')->group(function () {
     Route::apiResource('/publishers', PublisherController::class)->only(['show']);
+});
+
+Route::middleware('auth:sanctum')->group(function () {
+    Route::get('email/verify/{id}',  [VerificationController::class, 'verify'])->name('verification.verify'); // Make sure to keep this as your route name
+
+    Route::get('email/resend', [VerificationController::class, 'resend'])->name('verification.resend');
 });
